sc2/assets/service-c-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: service-c-srv
  labels:
    app: service-c-app
    service: service-c-app-srv
spec:
  ports:
    - port: 80
      name: http-80
      targetPort: 8082
  selector:
    app: service-c-app
